--- a/WebContent/research/uploadLattesCV/index.xhtml
+++ b/WebContent/research/uploadLattesCV/index.xhtml
@@ -13,7 +13,7 @@
     <ui:define name="description"><h:outputText value="#{msgsResearch['uploadLattesCV.title.description']}" /></ui:define>
 
   	<ui:define name="body">
-		<p><h:outputText value="#{msgsResearch['uploadLattesCV.text.instructions']}" /></p>
+		<p><h:outputText value="#{msgsResearch['uploadLattesCV.text.instructions.upload']}" /></p>
 
 		<!-- The form to be filled with information on the administrator. -->
 		<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/form.xhtml">
@@ -29,7 +29,7 @@
 			</ui:decorate>
 
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formbuttonpanel-01.xhtml">
-				<p:commandButton ajax="false" actionListener="#{uploadLattesCVController.upload}" value="#{msgsResearch['uploadLattesCV.button.upload']}" update=":globalMessages form" icon="fa fa-fw fa-save" />
+				<p:commandButton ajax="false" action="#{uploadLattesCVController.upload}" value="#{msgsResearch['uploadLattesCV.button.upload']}" icon="fa fa-fw fa-save" />
 			</ui:decorate>
 		</ui:decorate>
 	</ui:define>
