--- a/WebContent/research/generateBibliography/bibliography.xhtml
+++ b/WebContent/research/generateBibliography/bibliography.xhtml
@@ -19,15 +19,17 @@
 		<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/form.xhtml">
 			<ui:param name="formName" value="form" /> 
 			<ui:param name="formLabel" value="#{msgsResearch['generateBibliography.form.result']}" />
-			<p:focus />
+			<ui:param name="formFileUpload" value="true" /> 
 			
 			<p:scrollPanel mode="native" style="width: 100%; height: 400px">
-				<h:outputText value="#{generateBibliographyController.bibliography}" />
+				<h:outputText value="#{generateBibliographyController.bibliography}" style="font-family: monospace; white-space: pre-wrap;" />
 			</p:scrollPanel>
 
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formbuttonpanel-02.xhtml">
 				<p:commandButton id="backButton" action="#{generateBibliographyController.back}" value="#{msgsResearch['generateBibliography.button.back']}" icon="fa fa-fw fa-arrow-left" />
-				<p:commandButton id="downloadButton" action="#{generateBibliographyController.download}" value="#{msgsResearch['generateBibliography.button.download']}" icon="fa fa-fw fa-download" />
+				<p:commandButton id="downloadButton" ajax="false" value="#{msgsResearch['generateBibliography.button.download']}" icon="fa fa-fw fa-download">
+					<p:fileDownload value="#{generateBibliographyController.bibliographyFile}" />
+				</p:commandButton>
 			</ui:decorate>
 		</ui:decorate>
 	</ui:define>
