--- a/WebContent/core/changePassword/index.xhtml
+++ b/WebContent/core/changePassword/index.xhtml
@@ -9,6 +9,7 @@
                 template="/WEB-INF/decorators/#{coreInfo.decorator}/decorator.xhtml">
 	<f:metadata>
 	    <f:viewParam name="code" value="#{changePasswordController.passwordCode}" />
+	    <f:viewAction action="#{changePasswordController.checkCode}" />
 	</f:metadata>	
 
 	<ui:define name="title"><h:outputText value="#{msgsCore['changePassword.title']}" /></ui:define>
@@ -16,7 +17,40 @@
     <ui:define name="description"><h:outputText value="#{msgsCore['changePassword.title.description']}" /></ui:define>
 
   	<ui:define name="body">
-  		<p>Password code: <h:outputText value="#{changePasswordController.passwordCode}" /></p>
+		<!-- Shown if the password code is invalid. -->
+		<h:panelGroup id="invalidCodePanel" rendered="#{not changePasswordController.validCode}">
+			<p><h:outputFormat value="#{msgsCore['changePassword.text.invalidCode']}"><f:param value="#{changePasswordController.passwordCode}" /></h:outputFormat></p>
+		</h:panelGroup>
+
+		<!-- Shown if the password code is valid. -->
+		<h:panelGroup id="validCodePanel" rendered="#{changePasswordController.validCode}">
+			<p><h:outputFormat value="#{msgsCore['changePassword.text.instructions.new']}"><f:param value="#{changePasswordController.academic.shortName}" /></h:outputFormat></p>
+
+			<!-- The form to be filled with information on the administrator. -->
+			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/form.xhtml">
+				<ui:param name="formName" value="form" /> 
+				<ui:param name="formLabel" value="#{msgsCore['changePassword.form.new']} #{changePasswordController.academic.name}" />
+				<p:focus />
+
+				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
+					<ui:param name="fieldName" value="password" />
+					<ui:param name="label" value="#{msgsCore['changePassword.field.password']}" />
+					<p:password id="password" minLength="6" value="#{changePasswordController.password}" required="true" feedback="true" promptLabel="#{msgs['primefaces.password.prompt']}" weakLabel="#{msgs['primefaces.password.weak']}" goodLabel="#{msgs['primefaces.password.good']}" strongLabel="#{msgs['primefaces.password.strong']}" />
+				</ui:decorate>
+
+				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formfield.xhtml">
+					<ui:param name="fieldName" value="repeatPassword" />
+					<ui:param name="label" value="#{msgsCore['changePassword.field.repeatPassword']}" />
+					<p:password id="repeatPassword" value="#{changePasswordController.repeatPassword}" required="true" feedback="false">
+						<f:ajax event="blur" render=":globalMessages" listener="#{changePasswordController.ajaxCheckPasswords}" execute="password repeatPassword" />
+					</p:password>
+				</ui:decorate>
+
+				<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formbuttonpanel-01.xhtml">
+					<p:commandButton action="#{changePasswordController.changePassword}" value="#{msgsCore['changePassword.button.new']}" update=":globalMessages form" icon="fa fa-fw fa-save" />
+				</ui:decorate>
+			</ui:decorate>
+		</h:panelGroup>
 	</ui:define>
 </ui:composition>
 
