--- a/WebContent/WEB-INF/decorators/admin-lte/decorator.xhtml
+++ b/WebContent/WEB-INF/decorators/admin-lte/decorator.xhtml
@@ -158,7 +158,7 @@
 								<!-- Menu Footer-->
 								<li class="user-footer">
 									<div class="pull-left">
-										<a href="javascript:alert('TODO: implement Edit Profile feature.')" class="btn btn-default btn-flat"><h:outputText value="#{msgs['menu.profile']}" /></a>
+										<h:link outcome="/core/editProfile/index" styleClass="btn btn-default btn-flat"><h:outputText value="#{msgs['menu.profile']}" /></h:link>
 									</div>
 									<div class="pull-right">
 										<a href="#{facesContext.externalContext.requestContextPath}/logout" class="btn btn-default btn-flat"><h:outputText value="#{msgs['menu.logout']}" /></a>
