--- a/WebContent/core/login/index.xhtml
+++ b/WebContent/core/login/index.xhtml
@@ -35,8 +35,9 @@
 			</ui:decorate>
 
 			<ui:decorate template="/WEB-INF/decorators/#{coreInfo.decorator}/formbuttonpanel-02.xhtml">
-				<p:commandButton action="/core/changePassword/reset" value="#{msgsCore['changePassword.title.reset']}" immediate="true" icon="fa fa-fw fa-repeat" />
-				<p:commandButton action="#{sessionController.login}" value="#{msgsCore['login.button.login']}" update=":globalMessages form" icon="fa fa-fw fa-key" />
+				<p:commandButton id="resetButton" action="/core/changePassword/reset" value="#{msgsCore['changePassword.title.reset']}" immediate="true" icon="fa fa-fw fa-repeat" />
+				<p:commandButton id="loginButton" action="#{sessionController.login}" value="#{msgsCore['login.button.login']}" update=":globalMessages form" icon="fa fa-fw fa-key" />
+				<p:defaultCommand target="loginButton" />
 			</ui:decorate>
 		</ui:decorate>
 	</ui:define>
