--- a/WebContent/WEB-INF/decorators/admin-lte/decorator-menu.xhtml
+++ b/WebContent/WEB-INF/decorators/admin-lte/decorator-menu.xhtml
@@ -20,9 +20,10 @@
 		<c:set var="menuOpen" value="#{request.requestURL.indexOf('/manageAcademics/') != -1}" />
 		<h:panelGroup rendered="#{sessionController.admin}">
 			<li class="treeview #{menuOpen ? 'active' : ''}">
-				<a href="#"><i class="fa fa-users"></i> <span><h:outputText value="#{msgsCore['core.menu.userManagement']}" /></span> <i class="fa fa-angle-left pull-right"></i></a>
+				<a href="#"><i class="fa fa-users"></i> <span><h:outputText value="#{msgsCore['core.menu.generalSettings']}" /></span> <i class="fa fa-angle-left pull-right"></i></a>
 				<ul class="treeview-menu #{menuOpen ? 'menu-open' : ''}" style="display: #{menuOpen ? 'block' : 'none'};">
-					<li><h:link outcome="/core/manageAcademics/list"><h:outputText value="#{msgsCore['core.menu.userManagement.manageAcademics']}" /></h:link></li>
+					<li><h:link outcome="/core/manageAcademics/list"><h:outputText value="#{msgsCore['core.menu.generalSettings.manageAcademics']}" /></h:link></li>
+					<li><h:link outcome="/core/manageCourses/list"><h:outputText value="#{msgsCore['core.menu.generalSettings.manageCourses']}" /></h:link></li>
 				</ul>
 			</li>
 		</h:panelGroup>
