--- a/WebContent/WEB-INF/decorators/admin-lte/decorator-menu.xhtml
+++ b/WebContent/WEB-INF/decorators/admin-lte/decorator-menu.xhtml
@@ -24,6 +24,7 @@
 				<ul class="treeview-menu #{menuOpen ? 'menu-open' : ''}" style="display: #{menuOpen ? 'block' : 'none'};">
 					<li><h:link outcome="/core/manageAcademics/list"><h:outputText value="#{msgsCore['core.menu.generalSettings.manageAcademics']}" /></h:link></li>
 					<li><h:link outcome="/core/manageCourses/list"><h:outputText value="#{msgsCore['core.menu.generalSettings.manageCourses']}" /></h:link></li>
+					<li><h:link outcome="/core/manageCourseCoordinations/list"><h:outputText value="#{msgsCore['core.menu.generalSettings.manageCourseCoordinations']}" /></h:link></li>
 				</ul>
 			</li>
 		</h:panelGroup>
